# arsitect

./: .coverage  .gitignore  AGENTS.md  README.md  analyze_result.json  check.txt  e2e_chat_smoke.py  e2e_dynamic_validation_report.md  e2e_dynamic_validation_test.py  e2e_sketch_import_test.py  fix_db.py  fix_plan_result.json  inspect_page_desc.py  inspect_utf8.py  verify_llm_ws.py  verify_llm_ws_log.jsonl
backend/: .coverage  .env.example  alembic.ini  kimi_arg_utf8_v4.json  kimi_out.jsonl  kimi_out_utf8.txt  kimi_stdin_gbk_out.json  kimi_stdin_json_out.json  kimi_stdin_utf16_out.json  kimi_stdin_utf8_v2.json  kimi_stdin_utf8_v3.json  kimi_stdin_utf8_v4.json  kimi_test_out.json  kimi_test_output.txt  main.py  pyproject.toml  requirements.txt  test_arch_fix.py  test_arch_fix_log.jsonl  test_kimi.py  test_parser.py  test_parser2.py  test_parser3.py  tmp_scan.json
backend/app/: __init__.py  main.py
backend/app/advanced/: __init__.py  drift_detector.py  history_viewer.py  import_export_manager.py  metrics_collector.py  notification_manager.py  permission_manager.py  prototype_arch_binder.py  search_engine.py
backend/app/artifacts/: artifact_editor.py
backend/app/c4/: analyzer.py  baseline_store.py  binding_registry.py  code_scanner.py  consistency_checker.py  cross_layer_validator.py  dsl_manager.py  extractor.py  interface_contract_store.py  open_ui_client.py  registry_extractor.py  renderer.py  reverse_locator.py  sketch_generator.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: seed_templates.py
backend/tests/: TRACEABILITY.csv  conftest.py
docs/: aicli.txt  (+15 more)
(+1144 files in other folders)
